# Linux-Joystick-input

./: CMakeLists.txt  LICENSE  README.md  joystick_ps3.c  joystick_ps3.h
include/: joystick.h  joystick_map.h  joystick_map_ps3.h  joystick_ps3.h  li_log.h
src/: joystick.c  joystick_map.c  joystick_ps3.c
test/: test.c
